Fix for bug 24996 - moving file creation from nsStreamXferOp into nsFileTransport where it belongs. r=mscott